# apoenastack-enc-eng-fastapi-gcp

./: .gitignore  docker-compose.yml
apoena-api-fastapi/: Dockerfile  pyproject.toml
apoena-api-fastapi/apoena_api_fastapi/: app.py
apoena-api-fastapi/apoena_api_fastapi/database/: database_client.py  models.py
database/: pyproject.toml
database/database/: create_tables.py  populate_tables.py
database/database/db/base/1/: 2673
database/database/db/base/12407/: 2619  2674  pg_internal.init
database/database/db/base/16384/: 1247  1249  1259  16385  16391  2606  2608  2608_vm  2610  2619  2619_fsm  2619_vm  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  2840  2840_vm  2841  3455  pg_internal.init
database/database/db/global/: 1262  2671  pg_control  pg_internal.init
database/database/db/pg_stat/: db_0.stat  db_12407.stat  db_16384.stat  global.stat
db/base/1/: 2673  2674
db/base/12407/: 2691  pg_internal.init
db/base/16384/: 1247  1247_vm  1249  1249_vm  1259  1259_vm  16385  16391  2606  2608  2608_vm  2610  2619  2619_fsm  2619_vm  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2840_vm  2841  3455  pg_internal.init
db/global/: 1260  1262  2671  pg_control  pg_internal.init
db/pg_stat/: db_0.stat  db_12407.stat  db_16384.stat  global.stat
test_api/: pyproject.toml
test_api/test_api/: app.py  token_logic.py
